tests/snapshots/asm_snapshots__asm_u128_div_x86_64@x86_64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u128::Uint128 as core::ops::arith::Div>::div:
	push rax
	mov rax, rdx
	or rax, rcx
	je .LBB_2
	call qword ptr [rip + __udivti3@GOTPCREL]
	pop rcx
	ret
.LBB_2:
	lea rdi, [rip + .Lanon.12]
	call qword ptr [rip + core::panicking::panic_const::panic_const_div_by_zero@GOTPCREL]
