tests/snapshots/asm_snapshots__asm_u128_mul.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::u128::Uint128 as core::ops::arith::Mul>::mul,"ax",@progbits
	.globl	<bigints::u128::Uint128 as core::ops::arith::Mul>::mul
	.p2align	4
.type	<bigints::u128::Uint128 as core::ops::arith::Mul>::mul,@function
<bigints::u128::Uint128 as core::ops::arith::Mul>::mul:
	.cfi_startproc
	mulx r8, rax, rdi
	imul rcx, rdi
	imul rdx, rsi
	add rdx, rcx
	add rdx, r8
	ret
