tests/snapshots/asm_snapshots__asm_u128_mul@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u128::Uint128 as core::ops::arith::Mul>::mul:
	mul x9, x2, x1
	mul x8, x2, x0
	umulh x10, x2, x0
	madd x9, x3, x0, x9
	mov x0, x8
	add x1, x9, x10
	ret
