tests/snapshots/asm_snapshots__asm_u128_mul_riscv@riscv64gc-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u128::Uint128 as core::ops::arith::Mul>::mul:
	mul a4, a2, a0
	mulhu a5, a2, a0
	mul a0, a3, a0
	mul a1, a2, a1
	add a0, a0, a1
	add a1, a0, a5
	mv a0, a4
	ret
