tests/snapshots/asm_snapshots__asm_u128_mul_s390x@s390x-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u128::Uint128 as core::ops::arith::Mul>::mul:
	lgr %r0, %r4
	msgr %r2, %r5
	mlgr %r4, %r3
	msgr %r0, %r3
	agr %r2, %r0
	agr %r2, %r4
	lgr %r3, %r5
	br %r14
