tests/snapshots/asm_snapshots__asm_u128_mul_x86_64@x86_64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u128::Uint128 as core::ops::arith::Mul>::mul:
	mulx r8, rax, rdi
	imul rcx, rdi
	imul rdx, rsi
	add rdx, rcx
	add rdx, r8
	ret
