tests/snapshots/asm_snapshots__asm_u128_sub.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::u128::Uint128 as core::ops::arith::Sub>::sub,"ax",@progbits
	.globl	<bigints::u128::Uint128 as core::ops::arith::Sub>::sub
	.p2align	4
.type	<bigints::u128::Uint128 as core::ops::arith::Sub>::sub,@function
<bigints::u128::Uint128 as core::ops::arith::Sub>::sub:
	.cfi_startproc
	mov rax, rdi
	sub rax, rdx
	sbb rsi, rcx
	mov rdx, rsi
	ret
