tests/snapshots/asm_snapshots__asm_u128_sub@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u128::Uint128 as core::ops::arith::Sub>::sub:
	subs x0, x0, x2
	sub x8, x1, x3
	cset w9, lo
	sub x1, x8, x9
	ret
