tests/snapshots/asm_snapshots__asm_u128_sub_riscv@riscv64gc-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u128::Uint128 as core::ops::arith::Sub>::sub:
	sub a4, a0, a2
	sltu a0, a0, a2
	sub a1, a1, a3
	sub a1, a1, a0
	mv a0, a4
	ret
