tests/snapshots/asm_snapshots__asm_u128_sub_x86_64@x86_64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u128::Uint128 as core::ops::arith::Sub>::sub:
	mov rax, rdi
	sub rax, rdx
	sbb rsi, rcx
	mov rdx, rsi
	ret
