tests/snapshots/asm_snapshots__asm_u256_add@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u256::Uint256 as core::ops::arith::Add>::add:
	ldp x9, x12, [x1]
	ldp x10, x11, [x0]
	adds x9, x9, x10
	ldp x10, x14, [x1, #16]
	adcs x11, x12, x11
	ldp x12, x13, [x0, #16]
	stp x9, x11, [x8]
	adcs x9, x10, x12
	adc x10, x14, x13
	stp x9, x10, [x8, #16]
	ret
